--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,9 +27,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^27.5.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "jest": "^28.1.0",
+    "jest-expo": "^45.0.1",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-expo"
   }
 }
