--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^27.5.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "babel-plugin-module-resolve": "^1.3.0",
     "jest": "^28.1.0",
     "jest-expo": "^45.0.1",
     "prettier": "^2.6.2",
