--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "jest": "^28.1.0",
     "jest-expo": "^45.0.1",
     "prettier": "^2.6.2",
+    "react-native-svg-transformer": "^1.0.0",
     "ts-jest": "^28.0.3",
     "typescript": "~4.3.5"
   },
