--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": "./",
     "paths": {
       "@assets/*": ["./assets/*"],
-      "@constants": ["./src/constants"]
+      "@constants": ["./src/constants"],
+      "@features/*": ["./src/features/*"],
+      "@components/*": ["./src/components/*"]
     }
   }
 }
