--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "@assets/*": ["./assets/*"],
+      "@screens/*": ["./src/screens/*"],
       "@constants": ["./src/constants"],
       "@features/*": ["./src/features/*"],
       "@components/*": ["./src/components/*"]
