--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,6 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-location": "~14.2.2",
@@ -36,7 +35,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
