--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,8 @@
     "jest-expo": "^45.0.1",
     "prettier": "^2.6.2",
     "react-native-svg-transformer": "^1.0.0",
+    "standard-version": "^9.5.0",
+    "standard-version-expo": "^1.0.3",
     "ts-jest": "^28.0.3",
     "typescript": "~4.3.5"
   },
