feat: change default Expo app icons

--- a/app.json
+++ b/app.json
@@ -5,11 +5,12 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "backgroundColor": "#3A92E2",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#3A92E2"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,7 +22,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundImage": "./assets/adaptive-background.png",
+        "backgroundColor": "#3A92E2"
       },
       "versionCode": 1
     },
