--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
-    "expo-app-loading": "~2.0.0"
+    "expo-app-loading": "~2.0.0",
+    "expo-location": "~14.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
