--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@assets/*": ["./assets/*"],
       "@screens/*": ["./src/screens/*"],
       "@constants": ["./src/constants"],
+      "@contexts/*": ["./src/contexts/*"],
       "@features/*": ["./src/features/*"],
       "@components/*": ["./src/components/*"]
     }
