--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
     "expo-app-loading": "~2.0.0",
-    "expo-location": "~14.2.2"
+    "expo-location": "~14.2.2",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
