--- a/package.json
+++ b/package.json
@@ -1,59 +1,16 @@
 {
   "name": "weather-now",
   "private": true,
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "author": "Dylan Luna <me@dilanluna.com>",
-  "license": "MIT",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest",
-    "release": "standard-version"
-  },
+  "workspaces": [
+    "app"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dilanluna/weather-now.git"
   },
-  "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "expo": "~45.0.0",
-    "expo-font": "~10.1.0",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
-    "expo-app-loading": "~2.0.0",
-    "expo-location": "~14.2.2",
-    "expo-splash-screen": "~0.15.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@testing-library/react-native": "^9.1.0",
-    "@types/jest": "^27.5.1",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "babel-plugin-module-resolve": "^1.3.0",
-    "jest": "^28.1.0",
-    "jest-expo": "^45.0.1",
-    "prettier": "^2.6.2",
-    "react-native-svg-transformer": "^1.0.0",
-    "standard-version": "^9.5.0",
-    "standard-version-expo": "^1.0.3",
-    "ts-jest": "^28.0.3",
-    "typescript": "~4.3.5"
-  },
-  "jest": {
-    "preset": "jest-expo"
+  "author": "Dylan Luna <me@dilanluna.com>",
+  "license": "MIT",
+  "scripts": {
+    "start:app": "npm run android --workspace app"
   }
 }
