--- a/app/package.json
+++ b/app/package.json
@@ -41,18 +41,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@testing-library/react-native": "^9.1.0",
-    "@types/jest": "^27.5.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "babel-plugin-module-resolve": "^1.3.0",
-    "jest": "^28.1.0",
     "jest-expo": "^45.0.1",
-    "prettier": "^2.6.2",
     "react-native-svg-transformer": "^1.0.0",
     "standard-version": "^9.5.0",
-    "standard-version-expo": "^1.0.3",
-    "ts-jest": "^28.0.3",
-    "typescript": "~4.3.5"
+    "standard-version-expo": "^1.0.3"
   },
   "jest": {
     "preset": "jest-expo"
