--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "weather-now",
   "private": true,
   "workspaces": [
-    "app"
+    "app",
+    "backend"
   ],
   "repository": {
     "type": "git",
@@ -11,6 +12,15 @@
   "author": "Dylan Luna <me@dilanluna.com>",
   "license": "MIT",
   "scripts": {
-    "start:app": "npm run android --workspace app"
+    "start:app": "npm run android --workspace app",
+    "start:backend": "npm start --workspace backend",
+    "test:backend": "npm test --workspace backend"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
+    "typescript": "~4.3.5"
   }
 }
