--- a/app/app.json
+++ b/app/app.json
@@ -7,6 +7,10 @@
     "icon": "./assets/icon.png",
     "backgroundColor": "#3A92E2",
     "userInterfaceStyle": "automatic",
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#00000000"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "cover",
