--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,13 @@
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "http-status": "^1.5.2",
+    "morgan": "^1.10.0",
     "openweathermap-api-client": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
+    "@types/morgan": "^1.9.3",
     "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.16",
