--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start:app": "npm run android --workspace app",
     "start:backend": "npm start --workspace backend",
-    "test:backend": "npm test --workspace backend"
+    "test:backend": "npm test --workspace backend",
+    "build:backend": "npm run build --workspace backend"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
