chore(pkg): change backend package name

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-now-backend",
+  "name": "@weather-now/backend",
   "private": true,
   "version": "1.0.0",
   "main": "dist/server.js",
