chore(pkg): change app package name

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-now-app",
+  "name": "@weather-now/app",
   "private": true,
   "version": "1.0.0",
   "main": "src/index.ts",
