--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^27.5.1",
     "jest": "^28.1.0",
     "prettier": "^2.6.2",
+    "standard-version": "^9.5.0",
     "ts-jest": "^28.0.3",
     "typescript": "~4.3.5"
   }
