--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -6,47 +6,39 @@ on:
       - main
 
 jobs:
-  check:
+  deploy:
+    name: Test, Build & Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 10
-      - name: Check for changes
+
+      - name: 🔎 Check for changes
         uses: marceloprado/has-changed-path@v1
         id: changed-backend
         with:
           paths: backend
-      - if: steps.changed-backend.output.changed == 'false'
-        run: echo "No change has been detected" && exit 1
 
-  test:
-    needs: check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+      - name: ❗ No change has been detected
+        if: steps.changed-backend.output.changed == 'false'
+        run: exit 1
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+
       - name: 📦 Install dependencies
-        run: npm ci
+        run: npm ci --workspace backend --include-workspace-root
+
       - name: 🧪 Run tests
         run: npm run test:backend
         env:
           OPENWEATHERMAP_API_KEY: ${{ secrets.OPENWEATHERMAP_API_KEY }}
 
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: 📦 Install dependencies
-        run: npm ci
       - name: 🔨 Build backend
         run: npm run build:backend
+
       - name: 🚀 Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
