--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "http-status": "^1.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openweathermap-api-client": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
